get informations from Jira

--- a/packages/Quality/widgets/Jira/Jira.html
+++ b/packages/Quality/widgets/Jira/Jira.html
@@ -1,2 +1,28 @@
-<h2 class="widget-title">Jira</h2>
-<div class="content"></div>
+<h2 class="wclassget-title">Jira</h2>
+<div class="content">
+	<table>
+		<tr class="project">
+			<!-- project and version -->
+			<th class="name">
+				
+			</th>
+			<th class="version">
+				
+			</th>
+		</tr>
+		<tr class="IssueNumber">
+			<!-- number of issues -->
+		</tr>
+		<tr class="IssuesStat">
+			<th class="Priorities">
+				<!-- Priorities -->
+			</th>
+			<th class="Status">
+				<!-- Status -->
+			</th>
+		</tr>
+		<tr class="IssuesList">
+			<!-- Issue list -->
+		</tr>
+	</table>
+</div>
