display Jira issues in a tab

--- a/packages/Quality/widgets/Jira/Jira.html
+++ b/packages/Quality/widgets/Jira/Jira.html
@@ -21,8 +21,14 @@
 				<!-- Status -->
 			</th>
 		</tr>
-		<tr class="IssuesList">
+	</table>
+	<table class="IssuesList">
 			<!-- Issue list -->
+		<tr class="titre">  
+			<th class="priority"> priority </th> 
+			<th class="status"> status </th> 
+			<th class ="type">  type  </th>
+			<th class="title"> title </th> 
 		</tr>
 	</table>
 </div>
