work on css : widget size and global theme

--- a/packages/Quality/widgets/Jira/Jira.html
+++ b/packages/Quality/widgets/Jira/Jira.html
@@ -1,6 +1,6 @@
 <h2 class="wclassget-title">Jira</h2>
 <div class="content">
-	<table>
+	<table class="table">
 		<tr class="project">
 			<!-- project and version -->
 			<th class="name">
